# CPHAP

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-black.yaml
cphap/: core.py  functions.py  receptive_field.py  utils.py
examples/: playground.py  tsul.py  uwave.py  workspace.py
