[tool.poetry]
name = "cphap"
version = "0.1.2"
description = ""
authors = ["Hirotaka Kawashima <k.hirotaka@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.5,<3.9"
seaborn = "^0.11.0"
numpy = "^1.19.2"
matplotlib = "^3.3.2"
black = "^20.8b1"
quicksom = "^0.0.4"
tslearn = "^0.4.1"
h5py = "^2.10.0"
torch = "^1.7.0"
enchanter = "^0.8.0"
sompy = {git = "https://github.com/sevamoo/SOMPY.git"}
torchscan = {git = "https://github.com/frgfm/torch-scan.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py36", "py37", "py38"]
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .github
    | examples
    | tests
)
'''
